# DataEditorX2

./: .gitignore  index.html  package-lock.json  package.json
.github/workflows/: build.yml
src/: App.vue  main.ts
src-tauri/: Cargo.toml  config.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  lib.rs  main.rs
src-tauri/src/api/: cdb.rs  config.rs
src/page/: card.vue  coder.vue  list.vue
src/script/: config.ts  db.ts  invoke.ts  sleep.ts
