[package]
name = "dex2"
version = "0.1.0"
description = "DEX II"
authors = ["jwyxym"]
edition = "2024"

[lib]
name = "dex2_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0.102"
tokio-rusqlite = "0.7.0"
tokio = { version = "1.49.0", features = ["full"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
tauri-plugin-os = "2"
basic-toml = "0.1.10"
tauri-plugin-dialog = "2"
bincode = "2.0.0-rc.3"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
